<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    android:padding="16dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount">

    <ProgressBar
        android:id="@+id/create_account_progress"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/create_account_username"
            android:layout_marginTop="16dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingBottom="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <AutoCompleteTextView
            android:id="@+id/create_account_email"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/create_account_password"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/create_account_button"
            android:textColor="@color/buttonColor"
            android:text="@string/create"
            android:background="@android:color/transparent"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/create_intent"
            android:textColor="@color/buttonColor"
            android:text="@string/intent"
            android:background="@android:color/transparent"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>



</LinearLayout>